# terminalsuite

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs
src/app/: dev_environment.rs  ports.rs
src/app/ports/: dev_environment.rs
src/domain/: dev_environment.rs
src/infra/adapters/input/: handlers.rs  routes.rs
src/infra/adapters/input/routes/: openapi.rs
src/infra/adapters/output/devops/: containers.rs
xr/: Cargo.toml  README.md
xr/src/: app.rs  config.rs  lib.rs  main.rs
xr/src/openxr/: eye_gaze.rs  mod.rs  probe.rs
