[package]
name = "terminalsuite"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
scalar_api_reference = { version = "0.1.0", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
utoipa = "5"
webauthn-rs = "0.5.5"
bollard = "0.21.0"
futures-util = "0.3.32"
